--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
 }
