--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation 'com.github.pavlospt:roundedletterview:1.2'
 }
